--- a/index.html
+++ b/index.html
@@ -1,177 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-adsense-account" content="ca-pub-2534586073857624" />
-    <title>Rowerowe Narty</title>
-
     <link rel="icon" href="./img/logo.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Signika+Negative:300"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rowerowe Narty</title>
   </head>
   <body>
-    <div class="logo">
-      <img src="./img/logo.png" alt="Rowerowe Narty - logo" loading="lazy" />
-    </div>
-
-    <main>
-      <!-- Main section -->
-      <section id="sectionMain" class="container__section">
-        <ul class="container__list">
-          <li id="keybindings" class="btn">play</li>
-          <!-- <li id="account" class="btn">account</li> -->
-          <li id="store" class="btn">store</li>
-          <li id="donate" class="btn">donate</li>
-          <li id="credits" class="btn">credits</li>
-        </ul>
-
-        <div class="currentUser">
-          <span>Current user: <span class="user"></span></span>
-        </div>
-      </section>
-
-      <!-- Keybindings -->
-      <section id="sectionKeybindings" class="container__section">
-        <div class="section__keybindings">
-          <ul class="keys">
-            <h3>Movement:</h3>
-            <li class="keys__element">W</li>
-            <li class="keys__element">S</li>
-            <li class="keys__element">A</li>
-            <li class="keys__element">D</li>
-          </ul>
-
-          <ul class="keys">
-            <h3>Shooting:</h3>
-            <li class="keys__element">
-              &uarr;
-              <!-- Arrow Up -->
-            </li>
-            <li class="keys__element">
-              &darr;
-              <!-- Arrow Down -->
-            </li>
-            <li class="keys__element">
-              &larr;
-              <!-- Arrow Left -->
-            </li>
-            <li class="keys__element">
-              &rarr;
-              <!-- Arrow Right -->
-            </li>
-          </ul>
-          <ul class="container__list">
-            <li id="play" class="btn">play</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- Account section (user, ranking) -->
-      <section id="sectionAccount" class="container__section">
-        <div class="container__account">
-          <ul class="container__list">
-            <li id="login" class="btn">log in</li>
-            <li id="ranking" class="btn">ranking</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- Login/Registration section -->
-      <section id="sectionLogin" class="container__section">
-        <div class="container__login">
-          <div class="form-container sign-up">
-            <form class="registerForm">
-              <h1>Create Account</h1>
-              <input name="username" type="text" placeholder="Username" />
-              <input name="password" type="password" placeholder="Password" />
-              <button type="submit" class="signUp">Sign Up</button>
-            </form>
-          </div>
-
-          <div class="form-container sign-in">
-            <form class="loginForm">
-              <h1>Sign In</h1>
-              <input name="username" type="text" placeholder="Username" />
-              <input name="password" type="password" placeholder="Password" />
-              <button type="submit" class="signIn">Sign In</button>
-            </form>
-          </div>
-
-          <div class="toggle-container">
-            <div class="toggle">
-              <div class="toggle-panel toggle-left">
-                <h1>Welcome Back!</h1>
-                <p>Enter your details and go to play!</p>
-                <button class="hidden" id="loginBtn">Sign In</button>
-              </div>
-
-              <div class="toggle-panel toggle-right">
-                <h1>Hello My Friend!</h1>
-                <p>Creating this account is the best decision in your life!</p>
-                <button class="hidden" id="registerBtn">Sign Up</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Ranking (account sub-section) -->
-      <section id="sectionRanking" class="container__section">
-        <div class="container__ranking">
-          <h2 class="ranking__header">Ranking</h2>
-          <ul class="ranking-list"></ul>
-        </div>
-      </section>
-
-      <!-- Store section -->
-      <section id="sectionStore" class="container__section">
-        <div class="container__store">
-          <div class="skins"></div>
-        </div>
-      </section>
-
-      <!-- Donate section :) -->
-      <section id="sectionDonate" class="container__section">
-        <div class="container__donate">
-          <p>
-            Here's my account number:
-            <span class="acc-number">PL39109028350000000146579429</span>.
-          </p>
-          <p>
-            And there is my
-            <a href="https://www.paypal.com/paypalme/megakoks" target="_blank"
-              ><span class="paypal">PayPal</span></a
-            >.
-          </p>
-          <p class="thx">THX FOR MONEY <span class="heart">❤</span></p>
-        </div>
-      </section>
-
-      <!-- Credits section -->
-      <section id="sectionCredits" class="container__section">
-        <div class="creators">
-          <p>
-            Konrad Ciesielski - <span class="ceo">CEO, I made everything</span>
-          </p>
-        </div>
-      </section>
-
-      <!-- Back button section -->
-      <section id="sectionBack" class="container__section">
-        <div class="container__back">
-          <ul class="container__list">
-            <li id="logout" class="btn">logout</li>
-            <li class="btn">back</li>
-          </ul>
-        </div>
-      </section>
-    </main>
-
-    <script type="module" src="./src/MainIndex.js"></script>
+    <div id="root"></div>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
