--- a/index.html
+++ b/index.html
@@ -15,78 +15,12 @@
     />
   </head>
   <body>
-    <!-- GAME -->
-    <nav class="navbar">
-      <div class="nav__logo">
-        <a href="index.html"
-          ><img src="./img/logo.png" alt="Rowerowe Narty - logo"
-        /></a>
-      </div>
-      <div class="nav__ui">
-        <ul class="ui__boosts ui__list">
-          <li class="ui__element ui__boost">
-            <img
-              src="./img/boosts/speed.png"
-              alt="Speed boost"
-              class="boost speed"
-            />
-          </li>
-          <li class="ui__element ui__boost">
-            <img
-              src="./img/boosts/pistol.png"
-              alt="Pistol"
-              class="boost pistol"
-            />
-            <sup class="ammo"></sup>
-          </li>
-          <li class="ui__element ui__boost">
-            <img
-              src="./img/boosts/multiplier.png"
-              alt="Score multiplier"
-              class="boost multi"
-            />
-          </li>
-          <li class="ui__element ui__boost">
-            <img
-              src="./img/boosts/shield.png"
-              alt="Shield"
-              class="boost shield"
-            />
-          </li>
-          <li class="ui__element ui__boost">
-            <img src="./img/boosts/coin.png" alt="Coins" class="boost coin" />
-            <sup class="coins"></sup>
-          </li>
-        </ul>
-
-        <ul class="ui__score ui__list">
-          <li class="ui__element">Score: <span class="score"></span></li>
-          <li class="ui__element">
-            The Best Score: <span class="best-score"></span>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <canvas></canvas>
-
-    <div class="game-over">
-      <h1>YOU NOOB!</h1>
-      <div class="game-over__scores">
-        <p class="game-over__score">Score: <span class="score"></span></p>
-        <p class="game-over__best-score">
-          Best Score: <span class="best-score"></span>
-        </p>
-      </div>
-      <p>Click to <span class="play-again">play again</span>.</p>
-    </div>
-
     <!-- MAIN MENU -->
-    <div class="logo">
-      <img src="./img/logo.png" alt="Rowerowe Narty - logo" loading="lazy" />
-    </div>
+    <main class="menu-container">
+      <div class="logo">
+        <img src="./img/logo.png" alt="Rowerowe Narty - logo" loading="lazy" />
+      </div>
 
-    <main>
       <!-- Main section -->
       <section id="sectionMain" class="container__section">
         <ul class="container__list">
@@ -95,10 +29,6 @@
           <li id="donate" class="btn">donate</li>
           <li id="credits" class="btn">credits</li>
         </ul>
-
-        <div class="currentUser">
-          <span>Current user: <span class="user"></span></span>
-        </div>
       </section>
 
       <!-- Keybindings -->
@@ -180,6 +110,9 @@
       </section>
     </main>
 
-    <script type="module" src="./src/MainIndex.js"></script>
+    <!-- GAME -->
+    <canvas style="display: none;"></canvas>
+
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
