urls / render navbar ui in js

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     />
   </head>
   <body>
-    <!-- MAIN MENU -->
-    <main class="menu-container">
-      <div class="logo">
-        <img src="./img/logo.png" alt="Rowerowe Narty - logo" loading="lazy" />
-      </div>
+    <div class="logo">
+      <img src="./img/logo.png" alt="Rowerowe Narty - logo" loading="lazy" />
+    </div>
 
+    <main>
       <!-- Main section -->
       <section id="sectionMain" class="container__section">
         <ul class="container__list">
@@ -110,9 +109,6 @@
       </section>
     </main>
 
-    <!-- GAME -->
-    <canvas style="display: none;"></canvas>
-
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/MainIndex.js"></script>
   </body>
 </html>
