--- a/public/play.html
+++ b/public/play.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+    <nav class="navbar"></nav>
     <canvas></canvas>
 
     <script type="module" src="../src/MainPlay.js"></script>
