--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- Store section -->
       <section id="sectionStore" class="container__section">
         <div class="container__store">
-          <div class="skins"></div>
+          <ul class="skins"></ul>
         </div>
       </section>
 
