--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
     <meta name="google-adsense-account" content="ca-pub-2534586073857624" />
     <title>Rowerowe Narty</title>
 
-    <link rel="icon" href="./img/logo.png" />
+    <link rel="icon" href="./public/img/logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Signika+Negative:300"
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/utils.css" />
+    <link rel="stylesheet" href="../styles/components/animate-logo.css" />
+    <link rel="stylesheet" href="../styles/components/keybindings.css" />
+    <link rel="stylesheet" href="../styles/components/store.css" />
+    <link rel="stylesheet" href="../styles/components/donate.css" />
+    <link rel="stylesheet" href="../styles/components/credits.css" />
   </head>
   <body>
     <div class="logo">
-      <img src="./img/logo.png" alt="Rowerowe Narty - logo" loading="lazy" />
+      <img
+        src="./public/img/logo.png"
+        alt="Rowerowe Narty - logo"
+        loading="lazy"
+      />
     </div>
 
     <main>
@@ -109,6 +120,8 @@
       </section>
     </main>
 
+    <!-- <script src="./src/utils/ui/changeSection.js"></script> -->
+    <!-- <script src="./src/utils/audio/music.js"></script> -->
     <script type="module" src="./src/MainIndex.js"></script>
   </body>
 </html>
