--- a/public/play.html
+++ b/public/play.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rowerowe Narty</title>
 
-    <link rel="icon" href="./img/logo.png" />
+    <link rel="icon" href="../public/img/logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Signika+Negative:300"
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/utils.css" />
+    <link rel="stylesheet" href="../styles/components/user_interface.css" />
+    <link rel="stylesheet" href="../styles/components/game_over.css" />
   </head>
   <body>
     <nav class="navbar"></nav>
