--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/utils.css" />
-    <link rel="stylesheet" href="../styles/components/animate-logo.css" />
-    <link rel="stylesheet" href="../styles/components/keybindings.css" />
-    <link rel="stylesheet" href="../styles/components/store.css" />
-    <link rel="stylesheet" href="../styles/components/donate.css" />
-    <link rel="stylesheet" href="../styles/components/credits.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/utils.css" />
+    <link rel="stylesheet" href="./styles/components/animate-logo.css" />
+    <link rel="stylesheet" href="./styles/components/keybindings.css" />
+    <link rel="stylesheet" href="./styles/components/store.css" />
+    <link rel="stylesheet" href="./styles/components/donate.css" />
+    <link rel="stylesheet" href="./styles/components/credits.css" />
   </head>
   <body>
     <div class="logo">
